--- a/swf Data/swf/index.html
+++ b/swf Data/swf/index.html
@@ -15,6 +15,7 @@
 <p><a href="cf.swf">If i'm being honest I dont remember what this game is and I don't feel like testing what it is atm</a></p>
 <p><a href="electric-man-2-540817f.swf">Electric man</a></p>
 <p><a href="learn-to-fly-37895ed4.swf">Learn to fly</a></p>
+<p><a href="army-of-ages.swf">Army of Ages</a></p>
 <p><a href="secure_Learn2Fly.swf">Learn to fly 2</a></p>
 <p><a href="secureLtF3NAPE.swf">Learn to fly 3</a></p>
 <p><a href="my-friend-pedro-1598012ef.swf">My friend Pedro</a></p>
