--- a/swf Data/swf/index.html
+++ b/swf Data/swf/index.html
@@ -13,6 +13,9 @@
 <p><a href="575163_superfighters202c.swf">Super Fighters</a></p>
 <p><a href="N.swf">"N"</a> (also known from its updated versions N+ and N++)</p>
 <p><a href="cf.swf">If i'm being honest I dont remember what this game is and I don't feel like testing what it is atm</a></p>
+<p><a href="Checkers.swf">Checkers</a></p>
+<p><a href="Super Mario 63.swf">Super Mario 63</a></p>
+<p><a href="Super Mario Flash.swf">Super Mario</a></p>
 <p><a href="electric-man-2-540817f.swf">Electric man</a></p>
 <p><a href="learn-to-fly-37895ed4.swf">Learn to fly</a></p>
 <p><a href="army-of-ages.swf">Army of Ages</a></p>
